Edited .css files

--- a/frontend/css/about-us.css
+++ b/frontend/css/about-us.css
@@ -110,7 +110,7 @@ body.dark-mode nav li a {
 }
 
 /* =========================================
-   HERO - PARALLAX
+   HERO
    ========================================= */
 #hero {
   min-height: 50vh;
